--- a/chat/web10_chat_rakaagusmaulana.html
+++ b/chat/web10_chat_rakaagusmaulana.html
@@ -8,7 +8,7 @@
     <title>Chat</title>
 
     <!-- css custome -->
-    <link rel="stylesheet" href="assets/css/index10.css">
+    <link rel="stylesheet" href="../assets/css/index10.css">
 
     <!-- link cdn fontawesome -->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
@@ -47,7 +47,7 @@
 
 
 
-    <script src="assets/js/script.js"></script>
+    <script src="../assets/js/script.js"></script>
 </body>
 
 </html>
