--- a/formValidation/web13_formValidation_rakaagusmaulana.html
+++ b/formValidation/web13_formValidation_rakaagusmaulana.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- link css style -->
-    <link rel="stylesheet" href="assets/css/index13.css">
+    <link rel="stylesheet" href="../assets/css/index13.css">
 </head>
 
 <body>
@@ -74,7 +74,7 @@
 
     </div>
 
-    <script src="assets/js/validation.js"></script>
+    <script src="../assets/js/validation.js"></script>
 </body>
 
 </html>
