--- a/kurs/web11_kurs_rakaagusmaulana.html
+++ b/kurs/web11_kurs_rakaagusmaulana.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 
     <!-- link Css Custome -->
-    <link rel="stylesheet" href="assets/css/index11.css">
+    <link rel="stylesheet" href="../assets/css/index11.css">
 </head>
 
 <body>
@@ -32,7 +32,7 @@
         </div>
     </div>
 
-    <script src="assets/js/script.js"></script>
+    <script src="../assets/js/script.js"></script>
 </body>
 
 </html>
