--- a/login/web12_login_rakaagusmaulan.html
+++ b/login/web12_login_rakaagusmaulan.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 
     <!-- Link custome css -->
-    <link rel="stylesheet" href="assets/css/index12.css">
+    <link rel="stylesheet" href="../assets/css/index12.css">
 </head>
 
 <body>
@@ -48,7 +48,7 @@
 
     </div>
 
-    <script src="assets/js/ontentifikasi.js"></script>
+    <script src="../assets/js/ontentifikasi.js"></script>
 </body>
 
 </html>
