--- a/login/web12_login_success.html
+++ b/login/web12_login_success.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- custome css -->
-    <link rel="stylesheet" href="assets/css/index12.css">
+    <link rel="stylesheet" href="../assets/css/index12.css">
 </head>
 
 <body>
